# face_swapping

./: .gitignore  dockerfile  generate.py  main.py  pyproject.toml  run_container.sh
src/: config.py  dataset_curator.py  download_dataset.py  huggingface_model_download.py
