[project]
name = "face-swapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.2",
    "insightface>=0.7.3",
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.13.0.90",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pyarrow>=23.0.0",
    "scikit-image>=0.26.0",
    "tqdm>=4.67.1",
]
